début du système de vagues, beta du système de preset

--- a/game.html
+++ b/game.html
@@ -91,7 +91,7 @@
 
             function initVague() {
                 vagueActuelle = getVagueActuelle()
-                obstacles =
+                obstacles = vagueActuelle.obstacles
             }
     
             function onTickUpdate() {
